[workspace.package]
version = "0.2.2"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only"
publish = false
description = "Phoxal catalog component — vl53l1x."
documentation = "https://github.com/phoxal/component-vl53l1x#readme"
homepage = "https://github.com/phoxal/component-vl53l1x"
repository = "https://github.com/phoxal/component-vl53l1x"

[workspace]
resolver = "3"
members = ["."]

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
phoxal-infra-bus = { git = "https://github.com/phoxal/framework", branch = "chore/workspace-restructure" }
phoxal-api-component = { git = "https://github.com/phoxal/framework", branch = "chore/workspace-restructure" }
phoxal-core-engine = { git = "https://github.com/phoxal/framework", branch = "chore/workspace-restructure" }
phoxal-core-component = { git = "https://github.com/phoxal/framework", branch = "chore/workspace-restructure" }
phoxal-infra-helpers = { git = "https://github.com/phoxal/framework", branch = "chore/workspace-restructure" }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "signal", "sync", "fs"] }
tracing = "0.1.44"

[workspace.lints.rust]
unused = "warn"

[profile.release]
lto = false
codegen-units = 16

# Patch the engine alias so a transitive git fetch lines up with the framework canonical source.
[patch."https://github.com/phoxal/engine"]
phoxal-infra-bus = { git = "https://github.com/phoxal/framework", branch = "chore/workspace-restructure" }
phoxal-api-component = { git = "https://github.com/phoxal/framework", branch = "chore/workspace-restructure" }
phoxal-core-engine = { git = "https://github.com/phoxal/framework", branch = "chore/workspace-restructure" }
phoxal-core-component = { git = "https://github.com/phoxal/framework", branch = "chore/workspace-restructure" }
phoxal-infra-helpers = { git = "https://github.com/phoxal/framework", branch = "chore/workspace-restructure" }
phoxal-core-robot = { git = "https://github.com/phoxal/framework", branch = "chore/workspace-restructure" }
phoxal-core-spatial = { git = "https://github.com/phoxal/framework", branch = "chore/workspace-restructure" }
phoxal-core-structure = { git = "https://github.com/phoxal/framework", branch = "chore/workspace-restructure" }

[package]
name = "phoxal-component-vl53l1x"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tracing = { workspace = true }
phoxal-core-engine = { workspace = true }
phoxal-infra-helpers = { workspace = true }

phoxal-core-component = { workspace = true }

phoxal-infra-bus = { workspace = true }
phoxal-api-component = { workspace = true }

[lints]
workspace = true
